# ResNetV2-PyTorch-Implementation

./: .gitignore  README.md  inference.py  main.py  pyproject.toml
configs/: resnet50_imagenette.yaml
models/: __init__.py  basic_block.py  bottleneck_block.py  resnet.py
notebooks/: train_colab.ipynb
results/: result.txt
src/: __init__.py  data.py  img_check.py  main.py  trainer.py  utils.py
