[project]
name = "resent-from-scratch-pytorch"
version = "0.1.0"
description = "ResNet from scratch with PyTorch"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "torchmetrics",
    "torchinfo",
    "matplotlib",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
